force-app/main/default/objects/Listener__c/Listener__c.object-meta.xml
<CustomObject>
    <label>Listener</label>
    <nameField>
        <label>Listener Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listeners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>