force-app/main/default/objects/Listener__c/fields/Enable_History__c.field-meta.xml
<CustomField>
    <fullName>Enable_History__c</fullName>
    <description>Denotes whether historical querying of records is enabled for this Listener</description>
    <inlineHelpText>Enable historical querying of records for this Listener</inlineHelpText>
    <label>Enable History</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>