force-app/main/default/objects/Listener__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Latest Apex Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>