force-app/main/default/objects/Listener__c/fields/Field_To_Track__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Track__c</fullName>
    <description>A designated field within the monitored object whose alterations are tracked by Flowdometer.</description>
    <inlineHelpText>Choose Field (eg: Status or Stage) you&apos;d like to track changes on</inlineHelpText>
    <label>Field To Track</label>
    <length>40</length>
    <type>Text</type>
</CustomField>