force-app/main/default/objects/Listener__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <defaultValue>0.1388888888888889</defaultValue>
    <description>Frequency to run the job</description>
    <label>Frequency(Minutes)</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>