force-app/main/default/objects/Listener__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A feature that allows toggling the listener record state. When inactive, the tracking gets put on hold without having to erase the record.</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>