force-app/main/default/objects/Listener__c/fields/Last_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Check__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Records the moment of the latest inspection for History records related to the monitored field within the Salesforce object.</description>
    <label>Last Check</label>
    <type>DateTime</type>
</CustomField>