force-app/main/default/objects/Listener__c/fields/Last_Execution_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Execution_On__c</fullName>
    <label>Last Execution On</label>
    <type>DateTime</type>
</CustomField>