force-app/main/default/objects/Listener__c/fields/Latest_Flow_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Latest_Flow_Error_Message__c</fullName>
    <label>Latest Flow Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>