force-app/main/default/objects/Listener__c/fields/Next_Check__c.field-meta.xml
<CustomField>
    <fullName>Next_Check__c</fullName>
    <formula>IF(
OR(ISBLANK(Frequency__c), Frequency__c = 0), Last_Check__c,
Last_Check__c + ( Frequency__c / 60 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Check</label>
    <type>DateTime</type>
</CustomField>