force-app/main/default/objects/Listener__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>The Salesforce object that is monitored by the Flowdometer listener.</description>
    <inlineHelpText>Choose Object that has the field you&apos;d like Tracked</inlineHelpText>
    <label>Object To Track</label>
    <length>40</length>
    <type>Text</type>
</CustomField>