force-app/main/default/objects/Listener__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>A classification attribute that enables sorting object-field trackers into subtypes to facilitate differentiated goal assignment.</description>
    <inlineHelpText>OPTIONAL: Type should be blank unless you plan on having different goal times for different Types of this object (eg: New Business vs Renewal Opportunities may expect different sales cycle times). 

If you need to combine two or more fields to get all Type permutations, you can build a formula field to concatenate them, and choose that field here.</inlineHelpText>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>