force-app/main/default/objects/Listener__c/fields/Unprocessed_History_Records__c.field-meta.xml
<CustomField>
    <fullName>Unprocessed_History_Records__c</fullName>
    <inlineHelpText>This field saves unprocessed History Records in order to batch our processing</inlineHelpText>
    <label>Unprocessed History Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>